With firefox 36 (and above), when lines are too long, in source mode there's horizontal scrollbar. Add white-space: pre-wrap for textarea. Fix #2084

--- a/plugins/dcCKEditor/js/ckeditor-skins/dotclear/sass/editor.scss
+++ b/plugins/dcCKEditor/js/ckeditor-skins/dotclear/sass/editor.scss
@@ -9,9 +9,14 @@
 @import "presets";
 
 .cke_chrome {
-  visibility: inherit;
+    visibility: inherit;
 }
 
 .cke_voice_label, legend.cke_voice_label {
   display: none;
+}
+
+// bug in firefox : https://support.mozilla.org/fr/questions/1050264
+.cke_browser_gecko .cke_contents textarea {
+    white-space: pre-wrap !important;
 }
